--- a/lab4/views/index.pug
+++ b/lab4/views/index.pug
@@ -1,5 +1,5 @@
-﻿extends layout
-
-block content
-  h1= title
-  p Welcome to #{title}
+﻿.vertical-menu
+  a.active(href='/') Home
+  a(href='/login') login
+  a(href='/registration') registration
+  
